added title to menu page

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -32,6 +32,14 @@
 <section class="mbr-gallery mbr-slider-carousel cid-r0QP3Dvzft" id="gallery2-d">
 
 
+    <div class="container align-center">
+      <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
+          Click Images To Go To The Customization Page!
+      </h2>
+    </div>
+
+
+
     <div class="container">
         <div>
           <!-- Filters -->
