--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -117,7 +117,9 @@
             <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/drunken-noodle-616x462.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Drunken_noodles') }}")'></div>
           </div>
 
-
+        <div class="carousel-control">
+          <span class="mbri-center" aria-hidden="true"></span><span class="sr-only">Click The Image Again!</span>
+        </div>
         <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-d"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery2-d"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span>
