--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -76,6 +76,12 @@
 
             <!-- Lightbox (Image enlargement, left/right/x/little circles modal) -->
             <div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-d">
+
+                  <div>
+                    <span>Click The Image Again! TOP TEST</span>
+                  </div>
+
+
               <div class="modal-dialog">
                 <div class="modal-content"><div class="modal-body">
                   <!--These are the little dots at the bottom of the large box-->
@@ -117,15 +123,15 @@
             <div class="carousel-item"><img src="{{ url_for('menu.static', filename='assets/images/drunken-noodle-616x462.jpg') }}" alt="" title="" style="cursor:pointer;" onclick='goToFoodUrl("{{ url_for('food.food_pdp', item='Drunken_noodles') }}")'></div>
           </div>
 
-        <div class="carousel-control">
-          <span class="mbri-center" aria-hidden="true"></span><span class="sr-only">Click The Image Again!</span>
-        </div>
         <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-d"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery2-d"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span>
         </a>
         <a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span>
         </a>
+        <div class="carousel-control">
+          <span class="mbri-left" aria-hidden="true"></span><span class="sr-only">Click The Image Again!</span>
+        </div>
       </div></div></div></div>
       </div>
     </div>
