random modal div

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -77,7 +77,7 @@
             <!-- Lightbox (Image enlargement, left/right/x/little circles modal) -->
             <div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-d">
 
-                  <div>
+                  <div class="modal">
                     <span>Click The Image Again! TOP TEST</span>
                   </div>
 
@@ -129,9 +129,6 @@
         </a>
         <a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span>
         </a>
-        <div class="carousel-control">
-          <span class="mbri-left" aria-hidden="true"></span><span class="sr-only">Click The Image Again!</span>
-        </div>
       </div></div></div></div>
       </div>
     </div>
