--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -77,12 +77,11 @@
             <!-- Lightbox (Image enlargement, left/right/x/little circles modal) -->
             <div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-d">
 
-                  <div class="modal">
-                    <span>Click The Image Again! TOP TEST</span>
-                  </div>
-
 
               <div class="modal-dialog">
+                  <div>
+                    <span>Click The Image Again! TOP TEST</span>
+                  </div>
                 <div class="modal-content"><div class="modal-body">
                   <!--These are the little dots at the bottom of the large box-->
                   <ol class="carousel-indicators">
