added modal dialogue

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -78,9 +78,12 @@
             <div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-d">
 
 
-              <div class="modal-dialog">
+
+
+
+              <div class="modal-dialog align-center">
                   <div>
-                    <span>Click The Image Again! TOP TEST</span>
+                    <p class="mbr-fonts-style display-5">Click The Image Again To Customize!</p>
                   </div>
                 <div class="modal-content"><div class="modal-body">
                   <!--These are the little dots at the bottom of the large box-->
