added customize font

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -83,7 +83,7 @@
 
               <div class="modal-dialog align-center">
                   <div>
-                    <p class="mbr-fonts-style display-5"><font color="white">Click The Image Again To Customize!</font></p>
+                    <p class="mbr-fonts-style display-5"><font color="white">Click The Image To Customize!</font></p>
                   </div>
                 <div class="modal-content"><div class="modal-body">
                   <!--These are the little dots at the bottom of the large box-->
