--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -39,6 +39,13 @@
                 <!--NEED ONE OF THESE FOR EVERY IN DEVELOPMENT GAME pong-->
                 <div class="card p-3 col-12 col-md-6">
                     <div class="card-wrapper">
+
+                          <div class="item-name px-2 align-center">
+                              <p class="mbr-fonts-style display-5">
+                                 {{selected_item['Base']}}
+                             </p>
+                          </div>
+
                         <div class="card-img">
                             <img src="{{ url_for('food.static', filename=selected_item['Img_URL']) }}" alt="pong">
                         </div>
