added an arrow to PDP

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -32,6 +32,12 @@
         	Edit your food below!
         </h3>
 
+        <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+          <a href="#next">
+            <i class="mbri-down mbr-iconfont"></i>
+          </a>
+        </div>
+
         <div class="row media-row">
 
               <div class="container align-center">
@@ -41,7 +47,7 @@
                     <div class="card-wrapper">
 
                           <div class="item-name px-2 align-center">
-                              <p class="mbr-fonts-style display-4">
+                              <p class="mbr-fonts-style display-3">
                                  {{selected_item['Base']}}
                              </p>
                           </div>
