--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -25,7 +25,7 @@
           {% for item in items %}
           <div class="team-item col-lg-3 col-md-6">
                   <div class="item-image">
-                      <img src="assets/images/drunken-noodle-510x383.jpg" alt="" title="">
+                      <img src="{{ url_for('food.static', filename=item['Img_url']) }}" alt="" title="">
                   </div>
                   <div class="item-caption py-3">
                       <div class="item-name px-2">
