added correct total price calc

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -30,11 +30,11 @@
                   <div class="item-caption py-3">
                       <div class="item-name px-2">
                           <p class="mbr-fonts-style display-5">
-                             {{item['Base']}} - {{item['Topping']}}</p>
+                             {{item['Base'][0]}} with {{item['Topping'][0]}}</p>
                           <p class="mbr-fonts-style display-6">
                              Spice: {{item['Spice']}}</p>
                           <p class="mbr-fonts-style display-6">
-                             Extra: {{item['Extra']}}</p>
+                             Extra: {{item['Extra'][0]}}</p>
                           <p class="mbr-fonts-style display-6">
                              Extra Rice: {{item['Extra_Rice']}}</p>
                           <p class="mbr-fonts-style display-6">
