--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -33,12 +33,18 @@
                              {{item['Title']}} with {{item['Topping'][0]}}</p>
                           <p class="mbr-fonts-style display-6">
                              Spice: {{item['Spice']}}</p>
+                          {% if item['Extra'] is not False %}
                           <p class="mbr-fonts-style display-6">
                              Extra: {{item['Extra'][0]}}</p>
+                          {% endif %}
+                          {% if item['Extra_Rice'] != '0' %}
                           <p class="mbr-fonts-style display-6">
                              Extra Rice: {{item['Extra_Rice']}}</p>
+                          {% endif %}
+                          {% if item['Notes'] is not False %}
                           <p class="mbr-fonts-style display-6">
                              Notes: {{item['Notes']}}</p>
+                          {% endif %}
                       </div>
                       <div class="item-role px-2">
                           <p>Price: ${{ item['Total'] }}</p>
