added none comparison

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -33,7 +33,7 @@
                              {{item['Title']}} with {{item['Topping'][0]}}</p>
                           <p class="mbr-fonts-style display-6">
                              Spice: {{item['Spice']}}</p>
-                          {% if item['Extra'] != None %}
+                          {% if item['Extra'] != 'None' %}
                           <p class="mbr-fonts-style display-6">
                              Extra: {{item['Extra'][0]}}</p>
                           {% endif %}
