--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -35,7 +35,7 @@
                           <p class="mbr-fonts-style display-6">
                              Spice: {{item['Spice']}}</p>
                           {% endif %}
-                          {% if item['Extra'][0] != 'None' and item['Extra'][0] != false %}
+                          {% if item['Extra'][0] != 'None' and item['Extra'] != false %}
                           <p class="mbr-fonts-style display-6">
                              Extra: {{item['Extra'][0]}}</p>
                           {% endif %}
