changed with statement for food toppping

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -30,7 +30,8 @@
                   <div class="item-caption py-3">
                       <div class="item-name px-2">
                           <p class="mbr-fonts-style display-5">
-                             {{item['Title']}} with {{item['Topping'][0]}}</p>
+                             {{item['Title']}} 
+                           {% if item['Topping'] != false %}with {{item['Topping'][0]}}{% endif %</p>
                           {% if item['Spice'] != false %}
                           <p class="mbr-fonts-style display-6">
                              Spice: {{item['Spice']}}</p>
