fixed syntax error

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -31,7 +31,7 @@
                       <div class="item-name px-2">
                           <p class="mbr-fonts-style display-5">
                              {{item['Title']}} 
-                           {% if item['Topping'] != false %}with {{item['Topping'][0]}}{% endif %</p>
+                           {% if item['Topping'] != false %}with {{item['Topping'][0]}}{% endif %}</p>
                           {% if item['Spice'] != false %}
                           <p class="mbr-fonts-style display-6">
                              Spice: {{item['Spice']}}</p>
