addec cart total

--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -28,7 +28,13 @@
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn">About Us</span>
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="{{ url_for('checkout.summary') }}"><span class="mbri-cart-full mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Cart</a></div>
+
+            <div class="navbar-buttons mbr-section-btn">
+                <a class="btn btn-sm btn-primary display-4" href="{{ url_for('checkout.summary') }}">
+                    <span class="mbri-cart-full mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Cart
+                    {% if session['total'] is defined %} {{session['total'][1]}}, ${{session['total'][0]}}{% endif %}
+                </a>
+            </div>
         </div>
     </nav>
 </section>
