--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -120,14 +120,16 @@
 
 
 
-
+{% if session['total'] is defined %} {{session['total'][1]}}, ${{session['total'][0]}}{% endif %}
     <div class="container">
         <div class="row justify-content-center">
             <div class="title col-12 col-lg-8">
                 <h2 class="align-center pb-2 mbr-fonts-style display-2">
                     Order Details</h2>
                 <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-5">
-                    Items: &lt;&gt;<br>Total Price: &lt;&gt;</h3>
+                    Items: {% if session['total'] is defined %}{{session['total'][1]}}{% else %}0{% endif %}
+                    <br>Total Price: {% if session['total'] is defined %}${{session['total'][0]}}{% else %}Free{% endif %}
+                </h3>
             </div>
         </div>
 
