--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -132,15 +132,14 @@
             </div>
         </div>
 
-        <div class="row py-1 justify-content-center">
+        <div class="row justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
-                <div data-form-alert="" hidden="">the order page was submitted</div>
                 <form action="{{ url_for('checkout.summary') }}" method="post">
 
                     <p class="mbr-fonts-style display-5">Select Order Type<br>
-                      <input type="radio" id="delivery" name="order_type" value="Delivery" checked>Delivery
+                      <input type="radio" id="delivery" name="order_type" value="Delivery" checked> Delivery
                       <br>
-                      <input type="radio" id="takeout" name="order_type" value="takeout">Takeout
+                      <input type="radio" id="takeout" name="order_type" value="takeout"> Takeout
                       <br>
                     </p>
                         <button href="" type="submit" class="btn btn-primary display-4">Submit Order</button>
