--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -133,7 +133,7 @@
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-6  col-md-8">
+            <div class="container align-center">
                 <form action="{{ url_for('checkout.summary') }}" method="post">
 
                     <p class="mbr-fonts-style display-5">Select Order Type<br>
