added delivery minimum label

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -137,13 +137,13 @@
                 <form action="{{ url_for('checkout.summary') }}" method="post">
 
                     <p class="mbr-fonts-style display-5">Select Order Type<br>
-                      <input type="radio" id="delivery" name="order_type" value="Delivery" checked> Delivery
+                      <input type="radio" id="delivery" name="order_type" value="Delivery" checked> Delivery - $20 Minimum
                       <br>
                       <input type="radio" id="takeout" name="order_type" value="takeout"> Takeout
                       <br>
                     </p>
-                        <button href="" type="submit" class="btn btn-primary display-4">Submit Order</button>
 
+                    <button href="" type="submit" class="btn btn-primary display-4">Submit Order</button>
                 </form>
             </div>
         </div>
