--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -137,7 +137,8 @@
                 <form action="{{ url_for('checkout.summary') }}" method="post">
 
                     <p class="mbr-fonts-style display-5">Select Order Type<br>
-                      <input type="radio" id="delivery" name="order_type" value="Delivery" checked> Delivery - $20 Minimum
+                      <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-6">Minimum $20 Delivery</h3>
+                      <input type="radio" id="delivery" name="order_type" value="Delivery" checked> Delivery
                       <br>
                       <input type="radio" id="takeout" name="order_type" value="takeout"> Takeout
                       <br>
