removed redirect after post request

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -133,7 +133,7 @@
                                   <option value=3>3</option>
                                   <option value=4>4</option>
                                   <option value=5>5</option>
-                                </select> Extra Rice ($2 each)
+                                </select> Extra Side(s) of Rice ($2 each)
                                 <br><br>
                                 {% endif %}
 
