--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -142,33 +142,9 @@
                           </div>
 
                         </div>
-                        <script>
-                          // Get the modal
-                          var modal = document.getElementById('submit_modal');
 
-                          // Get the <span> element that closes the modal
-                          var span = document.getElementsByClassName("close")[0];
-
-                          // When the user clicks on <span> (x), close the modal
-                          span.onclick = function() {
-                              modal.style.display = "none";
-                          }
-
-                          // When the user clicks anywhere outside of the modal, close it
-                          window.onclick = function(event) {
-                              if (event.target == modal) {
-                                  modal.style.display = "none";
-                              }
-                          }
-
-                          function submit_food(){
-                            document.getElementById('food_entry').submit();
-
-                            modal.style.display = 'block'
-                          }
-                        </script>
                         <div class="mbr-section-btn text-center">
-                            <button class="btn btn-primary display-4" onclick="submit_food();">
+                            <button class="btn btn-primary display-4" id="cart_button">
                                 Add to cart
                             </button>
                         </div>
@@ -181,11 +157,6 @@
 
 <!-- Modal Style -->
 <style>
-body {font-family: Arial, Helvetica, sans-serif;}
-
-
-
-
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -276,6 +247,37 @@ body {font-family: Arial, Helvetica, sans-serif;}
   </div>
 
 </div>
+
+
+<script>
+  // Get the modal
+  let modal = document.getElementById('submit_modal');
+
+  let btn = document.getElementById('cart_button');
+
+  // Get the <span> element that closes the modal
+  let span = document.getElementsByClassName("close")[0];
+
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function() {
+      modal.style.display = "none";
+  }
+
+  function submit_food(){
+    document.getElementById('food_entry').submit();
+
+    modal.style.display = 'block'
+  }
+
+  btn.onclick = submit_food;
+
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+      if (event.target == modal) {
+          modal.style.display = "none";
+      }
+  }
+</script>
 
     	</div>
 </div>
