--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -88,7 +88,7 @@
 
                           <!--customization starts here-->
                           <div class="item-role px-2">
-                              <form action="" method="POST" class="mbr-fonts-style display-6" id="food_entry" onsubmit="return false;">
+                              <form action="" method="POST" id="food_entry" onsubmit="return false;">
                                 <input name="base" type="hidden" value="{{selected_item['Base']}}">
 
                                 {% if selected_item['Spice'] != False %}
