removed button classes

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -143,8 +143,8 @@
 
                         </div>
 
-                        <div class="mbr-section-btn text-center">
-                            <button class="btn btn-primary display-4" id="cart_button">
+                        <div class="text-center">
+                            <button class="display-4" id="cart_button">
                                 Add to cart
                             </button>
                         </div>
