--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -277,7 +277,7 @@
   }
 
 
-  modal.style.display = "{{modal_display}}";
+  setTimeout(function(){modal.style.display = "{{modal_display}}";}, 500)
 </script>
 
     	</div>
