alert and modal

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -276,8 +276,8 @@
       }
   }
 
+  window.onload = function () { modal.style.display = "{{modal_display}}"; alert('hi')};
 
-  setTimeout(function(){modal.style.display = "{{modal_display}}";}, 500)
 </script>
 
     	</div>
