no submit but modal block

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -325,6 +325,7 @@
   }
   function submit_food(){
     //document.getElementById('food_entry').submit();
+    modal.style.display = "block";
     return false;
   }
   btn.onclick = submit_food;
@@ -336,7 +337,6 @@
       }
   }
 
-  modal.style.display = "{{modal_display}}";
 
 </script>
 
