--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -282,11 +282,6 @@
 
 .modal-body {padding: 2px 16px;}
 
-.modal-footer {
-    padding: 2px 16px;
-    background-color: #5cb85c;
-    color: white;
-}
 </style>
 
 <!-- The Modal -->
@@ -294,17 +289,20 @@
 
   <!-- Modal content -->
   <div class="modal-content">
+
     <div class="modal-header">
       <span class="close">&times;</span>
-      <br>
-      <h2>Modal Header</h2>
     </div>
+
     <div class="modal-body">
-      <p>Some text in the Modal Body</p>
-      <p>Some other text...</p>
-    </div>
-    <div class="modal-footer">
-      <h3>Modal Footer</h3>
+      <div class="mbr-section-btn text-center">
+          <button href="" class="btn btn-primary display-4" id="to-checkout">
+              To Checkout
+          </button>
+          <button href="" class="btn btn-primary display-4" id="to-checkout">
+              To Menu
+          </button>
+      </div>
     </div>
   </div>
 
@@ -312,6 +310,18 @@
 
 
 <script>
+  let to_cart = document.getElementById('to-cart');
+  let to_menu = document.getElementById('to-menu');
+
+  to_cart.onclick = function(){
+    window.location.href = "{{url_for('checkout.summary')}}";
+  }
+
+  to_menu.onclick = function(){
+    window.location.href = "{{url_for('menu.menu')}}";
+  }
+
+
   // Get the modal
   let modal = document.getElementById('submit_modal');
 
