changed button id's

--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -296,10 +296,10 @@
 
     <div class="modal-body">
       <div class="mbr-section-btn text-center">
-          <button href="" class="btn btn-primary display-4" id="to-checkout">
+          <button href="" class="btn btn-primary display-4" id="to-cart">
               To Checkout
           </button>
-          <button href="" class="btn btn-primary display-4" id="to-checkout">
+          <button href="" class="btn btn-primary display-4" id="to-menu">
               To Menu
           </button>
       </div>
