--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -296,11 +296,13 @@
 
     <div class="modal-body">
       <div class="mbr-section-btn text-center">
+          <p class="mbr-text mbr-fonts-style display-5">Great Choice!</p>
+          <br>
           <button href="" class="btn btn-primary display-4" id="to-cart">
-              To Checkout
+              Proceed To Checkout
           </button>
           <button href="" class="btn btn-primary display-4" id="to-menu">
-              To Menu
+              Back To Menu
           </button>
       </div>
     </div>
@@ -314,10 +316,12 @@
   let to_menu = document.getElementById('to-menu');
 
   to_cart.onclick = function(){
+    document.getElementById('food_entry').submit();
     window.location.href = "{{url_for('checkout.summary')}}";
   }
 
   to_menu.onclick = function(){
+    document.getElementById('food_entry').submit();
     window.location.href = "{{url_for('menu.menu')}}";
   }
 
@@ -333,6 +337,7 @@
   // When the user clicks on <span> (x), close the modal
   span.onclick = function() {
       modal.style.display = "none";
+      document.getElementById('food_entry').submit();
   }
   function show_modal(){
     //document.getElementById('food_entry').submit();
@@ -345,6 +350,7 @@
   window.onclick = function(event) {
       if (event.target == modal) {
           modal.style.display = "none";
+          document.getElementById('food_entry').submit();
       }
   }
 
