--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -318,14 +318,13 @@
   let to_menu = document.getElementById('to-menu');
 
   to_cart.onclick = function(){
-    document.getElementById("modal-dest").value = "to_cart"
+    document.getElementById("modal-dest").value = "to_cart";
     document.getElementById('food_entry').submit();
   }
 
   to_menu.onclick = function(){
-    document.getElementById("modal-dest").value = "to_menu"
+    document.getElementById("modal-dest").value = "to_menu";
     document.getElementById('food_entry').submit();
-    window.location.href = "{{url_for('menu.menu')}}";
   }
 
 
