--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -339,6 +339,7 @@
   // When the user clicks on <span> (x), close the modal
   span.onclick = function() {
       modal.style.display = "none";
+      document.getElementById("modal-dest").value = "stay";
       document.getElementById('food_entry').submit();
   }
   function show_modal(){
@@ -352,6 +353,7 @@
   window.onclick = function(event) {
       if (event.target == modal) {
           modal.style.display = "none";
+          document.getElementById("modal-dest").value = "stay";
           document.getElementById('food_entry').submit();
       }
   }
