changed cart div tag

--- a/nickdima/silk_thai/template/nav.html
+++ b/nickdima/silk_thai/template/nav.html
@@ -31,8 +31,10 @@
 
             <div class="navbar-buttons mbr-section-btn">
                 <a class="btn btn-sm btn-primary display-4" href="{{ url_for('checkout.summary') }}">
-                    <span class="mbri-cart-full mbr-iconfont mbr-iconfont-btn" id="cart_nav"></span>&nbsp;Cart
+                    <span class="mbri-cart-full mbr-iconfont mbr-iconfont-btn"></span>
+                    <div id="cart_nav">&nbsp;Cart
                     {% if session['total'] is defined %} {{session['total'][1]}}, ${{session['total'][0]}}{% endif %}
+                    </div>
                 </a>
             </div>
         </div>
