--- a/nickdima/silk_thai/template/productpage/pdp.html
+++ b/nickdima/silk_thai/template/productpage/pdp.html
@@ -360,13 +360,13 @@ function change_cart_before_post(){
   let final_price = document.getElementById('the_price').innerHTML;
   final_price = '$' + final_price.slice(7, final_price.length);
 
-  if(cart_text == 'cart'){
+  if(cart_text == 'Cart'){
     cart_span.innerHTML = 'Cart 1, ' + final_price;
   } else {
     let cur_item_count = cart_text.slice(5, cart_text.indexOf(','));
     cur_item_count = parseInt(cur_item_count, 10);
     cur_item_count++;
-    cart_span.innerHTML = 'Cart ' + cur_item_count + ',' + final_price; 
+    cart_span.innerHTML = 'Cart ' + cur_item_count + ', ' + final_price; 
   }
 }
 
